wip: most of the pieces in place but not quite working

--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^0.20.9",
-    "@astrojs/renderer-preact": "^0.2.2"
+    "@astrojs/renderer-preact": "^0.2.2",
+    "astro": "^0.20.9"
+  },
+  "dependencies": {
+    "@netlify/functions": "^0.7.2",
+    "node-fetch": "^3.0.0"
   }
 }
